--- a/docs/3-多进程并发编程.md
+++ b/docs/3-多进程并发编程.md
@@ -2,22 +2,19 @@
 created: 2024-08-03T19:28
 updated: 2024-08-03T21:26
 ---
-## 有了多线程 threading，为什么还要用多进程 multiprocessing 
- 
- 如果遇到了 CPU 密集型计算，多线程反而会降低执行速度！
 
+## 有了多线程 threading，为什么还要用多进程 multiprocessing
 
-虽然有全局解释器锁 GIL ，但是因为有 IO 的存在，多线程依然可以加速运行 
+如果遇到了 CPU 密集型计算，多线程反而会降低执行速度！
+
+虽然有全局解释器锁 GIL ，但是因为有 IO 的存在，多线程依然可以加速运行
 
 CPU 密集型计算，线程的自动切换反而变成了负担，多线程甚至减慢了运行速度
 
-![[image-3-多进程并发编程-2024-08-03_19-31-06-568.png]]
-
+![](./assets/image-3-多进程并发编程-2024-08-03_19-31-06-568.png)
 
 ## Multiprocessing
 
 Multiprocessing 模块就是 python 为了解决 GIL 缺陷引入的一个模块，原理是用多进程在多 CPU 上并行执行
 
-
-
-![[image-3-多进程并发编程-2024-08-03_21-26-29-221.png]]
+![](./assets/image-3-多进程并发编程-2024-08-03_21-26-29-221.png)
