--- a/docs/4-多协程并发编程.md
+++ b/docs/4-多协程并发编程.md
@@ -8,10 +8,8 @@ updated: 2024-08-03T23:45
 核心原理: 用一个超级循环（其实就是 while true）循环
 核心原理：配合 IO 多路复用原理（IO 时 CPU 可以干其他事情）
 
-
-![[image-4-多协程并发编程-2024-08-03_22-41-46-912.png]]
+![](./assets/image-4-多协程并发编程-2024-08-03_22-41-46-912.png)
 也叫异步操作
-
 
 ```python
 import asyncio
@@ -35,7 +33,6 @@ loop.run_until_complete(asyncio.wait(tasks))
 要用在异步 IO 编程中依赖的库必须支持异步 IO 特性
 爬虫引用中: Requests 不支持异步需要用 aiohttp
 
-
 ## 信号量 （英语：Semaphore）
 
 信号量（英语：Semaphore）又称为信号量、旗语。也叫 PV 操作
@@ -47,4 +44,4 @@ loop.run_until_complete(asyncio.wait(tasks))
 - 当计数值为 0，则线程等待该 semaphore 对象不再能成功直至该 semaphore 对象变成 signaled 状态
 - semaphore 对象的计数值大于 0，为 signaled 状态；计数值等于 0，为 nonsignaled 状态.
 
-![[image-4-多协程并发编程-2024-08-03_23-44-35-183.png]]
+![](./assets/image-4-多协程并发编程-2024-08-03_23-44-35-183.png)
